2008-10-01  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/AsyncQueue.py:
	* pycvsanaly2/Parser.py:

	Use a thread to read the log from the repository log command
	output so that the log is read into memory as soon as possible and
	we don't depend on the network most of the time.
	
2008-10-01  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Changed each topdir path to the path on its first revision.

2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:

	Fix a crash due to an invalid DBFile constructor invocation.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not get metrics for all the repositories of the database, but
	for the given one only.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/FileTypes.py:

	Work only over the files of the given repository.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/Database.py:

	Add a relationship between tree and repository to make sure the
	same path is stored with different id for every repository.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix circular dependency introduced by my previous commit.
	
2008-09-29  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Move imports out of the functions
	
2008-09-22  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not include topdirs that are currently deleted when analyzing
	only head.
	
2008-09-17  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use executemany instead of execute to inster the metrics into the
	db.
	
2008-09-17  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>